# Rust-Base-Backend

./: .gitignore  Cargo.toml  README.md
public/: index.html
src/: config.rs  lib.rs  main.rs  router.rs  server.rs  swagger.rs
src/controllers/: auth_controller.rs  base_controller.rs  mod.rs  protected_controller.rs
src/errors/: error_codes.rs  mod.rs
src/middleware/: auth_middleware.rs  mod.rs  validator.rs
src/models/: auth_model.rs  auth_request.rs  error_response.rs  messageModel.rs  mod.rs  token_model.rs
src/repositories/: base_Repository.rs  base_repository.rs  credentials_repository.rs  mod.rs  token_repository.rs
src/services/: auth_service.rs  base_service.rs  mod.rs
src/test/: auth_controller_test.rs  auth_integration_test.rs  auth_repository_tests.rs  auth_service_test.rs  base_controller_test.rs  base_repository_tests.rs  base_service_test.rs  integration_test.rs  mod.rs  protected_controller_test.rs  static_files_test.rs
src/validators/: base_validator.rs  mod.rs
