[package]
name = "rust-base-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.1", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0"
async-trait = "0.1.50"
warp = "0.3"
lazy_static = "1.4"
dotenv = "0.15"
utoipa = "4"
utoipa-swagger-ui = "7"
utoipauto = "0.1.12"
mockall = "0.13"
once_cell = "1.8"
jsonwebtoken = "9.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.38.1", features = ["full", "test-util"] }
once_cell = "1.8"
