[package]
name = "rust-base-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
async-trait = "0.1.89"
warp = { version = "0.4.2", features = ["server", "test"] }
lazy_static = "1.5.0"
dotenv = "0.15.0"
utoipa = "5.4.0"
utoipa-swagger-ui = "9.0.2"
utoipauto = "0.2.0"
mockall = "0.13.1"
once_cell = "1.21.3"
rand = "0.9.2"
sha2 = "0.10.9"
base64 = "0.22.1"
hex = "0.4.3"
chrono = { version = "0.4.41", features = ["serde", "clock"] }

[dev-dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["full", "test-util"] }
once_cell = "1.21.3"
